# simpleArgumentsParser

./: .README.md.swp  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.js  index.ts  orb.config  package-lock.json  package.json  test.js  tsconfig.esm.json  tsconfig.json
.github/workflows/: codeql-analysis.yml
examples/: coloredExample.js  example.js
legacy/: README.md
other_languages/: README.md
other_languages/bash/: colorsExample.sh  example.sh  parseCLI  test.sh
other_languages/cpp/: coloredExample.cpp  example.cpp  simpleargumentsparser.hpp
other_languages/rust/: .gitignore  Cargo.toml  README.md
other_languages/rust/examples/: basic.rs  colored.rs
other_languages/rust/src/: lib.rs
other_languages/rust/tests/: cli_tests.rs
src/: index.ts
